packages/components/src/components/MultiSelect/components/MultiSelectOptionsContainer/styles.css
/* BASE CSS */
.arkynMultiSelectOptionsContainer {
  position: absolute;
  z-index: 6;

  top: calc(100% + 5px);
  left: -2px;
  right: -2px;

  border-radius: 6px;
  list-style: none;

  display: flex;
  flex-direction: column;

  flex: 1;
  overflow: hidden;
  height: max-content;

  border: 1px solid var(--border);
  background-color: var(--card);

  max-height: 300px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

/* NOT FOUND TEXT */
.arkynMultiSelectOptionsContainer > p {
  font-weight: 400;
  font-size: 14px;
  padding: 16px;
  text-align: center;
  line-height: 21.79px;

  color: var(--text-body);
}

